background image invisibility fix

--- a/index.css
+++ b/index.css
@@ -541,7 +541,7 @@ body {
     --bg-color: rgb(10, 10, 10);
     --text-color: #fff;
     --blog-gray-color: rgb(180, 180, 180);
-    --background-image: linear-gradient( 90deg, rgba(10, 10, 10, 0.6), rgba(10, 10, 10, 1)), url("/assets/image/razer.png");
+    --background-image: linear-gradient( 90deg, rgba(10, 10, 10, 0.6), rgba(10, 10, 10, 1)), url("./assets/image/razer.png");
     --background-background: linear-gradient( 0deg, rgba(10, 10, 10, 1), rgba(10, 10, 10, 0.6)), url("") center center fixed;
     --height: 50vh;
 }
